// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Panel Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    A panel consists of three parts: A header, a body and a footer. You can mostly put whatever you want in any of these, but try not to put too much in the header and footer as these are meant to contain short and concise information about the body content.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
    >
      <p>
        Your main panel content is put here.
      </p>
      <p>
        Some more content over here.
      </p>
      <p>
        And one more line, just to be safe.
      </p>
    </Panel>
  </ComponentPreview>
  <Alert
    icon="warning"
    type="warning"
  >
    <h4>
      Deprecation warning
    </h4>
    <p>
      Only using 
      <PrismCode
        className="language-html"
        component="code"
      >
        &lt;header&gt;
      </PrismCode>
       and 
      <PrismCode
        className="language-html"
        component="code"
      >
        &lt;footer&gt;
      </PrismCode>
       is deprecated. Add 
      <Property
        value=".panel-header"
      />
       or 
      <Property
        value=".panel-footer"
      />
       to your panel header/footer element.
    </p>
  </Alert>
</Fragment>
`;

exports[`Documentation: Panel PanelDark renders 1`] = `
<Fragment>
  <h2
    id="panel-dark-mode"
  >
    Panel dark mode
  </h2>
  <p>
    Dark body with 
    <Property
      value=".panel-dark"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      darkMode={true}
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
      type="brand"
    >
      <p>
        Your main panel content is put here.
      </p>
      <p>
        Some more content over here.
      </p>
      <p>
        And one more line, just to be safe.
      </p>
    </Panel>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelHeaders renders 1`] = `
<Fragment>
  <h2
    id="panel-headers"
  >
    Panel headers
  </h2>
  <p>
    You can pick between two different panel headers, brand color with white text and white with green text. Add 
    <Property
      value=".panel-default"
    />
     or 
    <Property
      value=".panel-brand"
    />
     to the header to use one of them.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      title="Default panel"
    />
    


    <Panel
      title="Panel brand"
      type="brand"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelMuted renders 1`] = `
<Fragment>
  <h2
    id="muted-panel"
  >
    Muted panel
  </h2>
  <p>
    If you wish to use a completely gray panel you can add 
    <Property
      value=".panel-muted"
    />
     to the panel 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;section&gt;
    </PrismCode>
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
      type="muted"
    >
      <p>
        Your main panel content is put here.
      </p>
      <p>
        Some more content over here.
      </p>
      <p>
        And one more line, just to be safe.
      </p>
    </Panel>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelTable renders 1`] = `
<Fragment>
  <h2
    id="panel-with-table"
  >
    Displaying a full width table
  </h2>
  <p>
    To display a full width table in a panel use 
    <Property
      value=".panel-table"
    />
     on a div wrapping the table. Put 
    <Property
      value=".panel-table"
    />
     as a direct child of 
    <Property
      value=".panel"
    />
    . Tables put in a panel are given a border bottom to seperate it from the following elements.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      panelTable={
        <table
          className="table"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                #
              </th>
              <th
                scope="col"
              >
                First Name
              </th>
              <th
                scope="col"
              >
                Last Name
              </th>
              <th
                scope="col"
              >
                Location
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <th
                scope="row"
              >
                1
              </th>
              <td>
                Sven
              </td>
              <td>
                Svensson
              </td>
              <td>
                Visby
              </td>
            </tr>
            <tr>
              <th
                scope="row"
              >
                2
              </th>
              <td>
                Sara
              </td>
              <td>
                Svensson
              </td>
              <td>
                Stockholm
              </td>
            </tr>
            <tr>
              <th
                scope="row"
              >
                3
              </th>
              <td>
                Ola
              </td>
              <td>
                Nordmann
              </td>
              <td>
                Oslo
              </td>
            </tr>
            <tr>
              <th
                scope="row"
              >
                4
              </th>
              <td>
                Holger
              </td>
              <td>
                Danske
              </td>
              <td>
                Copenhagen
              </td>
            </tr>
            <tr>
              <th
                scope="row"
              >
                5
              </th>
              <td>
                Matti
              </td>
              <td>
                Meikäläinen
              </td>
              <td>
                Lahti
              </td>
            </tr>
          </tbody>
        </table>
      }
      subTitle="Panel subtitle"
      title="Panel title"
      type="brand"
    >
      <p>
        Your main panel content is put here.
      </p>
      <p>
        Some more content over here.
      </p>
      <p>
        And one more line, just to be safe.
      </p>
    </Panel>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Panels are large containers meant to be able to contain all of our other components.
  </p>
  <Overview />
  <PanelHeaders />
  <PanelDark />
  <PanelMuted />
  <PanelTable />
</DocContainer>
`;
